add LXC section

--- a/main.tex
+++ b/main.tex
@@ -69,6 +69,26 @@ hogehoge
 
 hogehoge
 
+\chapter{LXC超入門}
+
+Containerまわりの状況とLXCの基本的な使い方
+
+\section{Containerの世界とLXC}
+
+hogehoge
+
+\subsection{2015年におけるContainerの状況}
+
+hogehoge
+
+\subsection{LXCの歴史}
+
+\subsection{LXCの特徴と利点}
+
+\subsection{LXCの仕組み}
+
+\subsection{LXCの基本}
+
 \chapter{あとがき}
 
 \section{こじろー}
