make pdf for testing

--- a/main.tex
+++ b/main.tex
@@ -19,7 +19,7 @@
 \vspace*{-\headsep}
 \vspace*{-\topskip}
 \noindent\hspace*{-1in}\hspace*{-\oddsidemargin}
-\includegraphics[width=\paperwidth]{./img/cover.pdf}
+%\includegraphics[width=\paperwidth]{./img/cover.pdf}
 
 \newpage
 
@@ -225,6 +225,6 @@ hogehoge
 \vspace*{-\headsep}
 \vspace*{-\topskip}
 \noindent\hspace*{-1in}\hspace*{-\oddsidemargin}
-\includegraphics[width=\paperwidth]{./img/bcover.pdf}
+%\includegraphics[width=\paperwidth]{./img/bcover.pdf}
 
 \end{document}
