--- a/main.tex
+++ b/main.tex
@@ -39,17 +39,56 @@
 
 \setcounter{page}{1}
 
-hogehoge
-
 \chapter{KVM}
 
-\section{KVM, QEMU}
+KVMについて知りたい人がいたとして、その人が知りたいのは恐らくKVMではなくQEMUだろう。この章では、実はKVMは、特に何もしていない、というのを解説しようと思う。メモリの割り当て？ネットワーク接続？USB?ディスク？それはKVMではなくQEMUで語るものだ。皆が何となく「ハイパーバイザ」と呼ぶ物、それは正確には「仮想マシン」と呼び、それはQEMUによって実現される。KVMはQEMUの仮想CPU高速化モジュールとしてとらえてしまっても、特に誤解はない。そして、これを正確には「ハイパーバイザ」と呼ぶ。
 
-hogehoge
+KVMとQEMUの違いをはっきりさせないと、有らぬ誤解を生むばかりか、適切な情報を検索することもままならない。この2つは似て非なるものではなく、はっきり言って、特に依存はない。KVMが無くてもQEMUは動く。実はKVMなんて影も形もない頃から、QEMUは比較的安定して動作していた。あえて言ってしまうと、むしろKVMの方が、存在意義という観点から、QEMUに依存している。
 
-\subsection{KVM, QEMU, OpenStack}
+勉強し始めた時、僕はまずKVMから勉強を始めた。そこからvhostやvirtioをいったものを調べ始めた。が、どうしてもよく分からない。最近ようやく理解のとっかかりをつかみ始めたが、ここに至ってようやく、最初からQEMUを勉強しておけば迷いにくいことに気付いた。というわけで、この本ではQEMUの解説からしていくことにする。
 
-hogehoge
+\section{QEMU}
+
+フォン・ノイマンという人が提唱したノイマン型コンピュータの仕組みは、何の改善もないまま、現在のコンピュータに使われている。基本的には、こうだ。コンピュータは以下の要素で成り立つ
+
+\begin{itemize}
+  \item 演算装置（CPU）
+  \item 記憶装置（RAM, Disk）
+  \item 出力装置（Tape, Display）
+  \item 入力装置（マウス・キーボード）
+\end{itemize}
+
+記憶装置に書き込まれたプログラム通りに、記憶装置に一時的な計算結果を書き込みつつ、演算装置が計算を行う。可変パラメータは入力装置から得られるし、計算結果は出力装置に送られる。言ってしまえば、コンピュータはこれだけのことしかしない。CPUにはレジスタもある、という反論もあるが、それは要するに記憶装置だ。ネットは？それはよく訓練された入出力装置に過ぎない。まとめてしまえばたったこれだけでコンピュータは動作する。
+
+そして、驚くべきことに、QEMUを知る上での前提知識は以上だ。QEMUとは、つまりこの各装置をソフトウェアでエミュレートしているだけなのだ。
+
+\subsection{CPUのエミュレート}
+
+KVMの話をする時に必要になるのが、CPUの仮想化だ。CPUが解釈できる様々な演算命令をすべてエミュレートすれば、CPUの仮想化ができる。QEMUは様々なCPUの命令をエミュレートできる。ARMもx86も認識できる。
+
+中でやっていることは単純だ。実行するべき命令をホストのCPU命令に書き換えて実行する。x86のCPUで動作するホストでARMの命令をエミュレートするには、ARMの命令をx86の命令に変換すればよい。CPUでできることなどたかがしれているから、ほぼ一対一で対応がある。対応がない場合は、複数の命令を組み合わせて代替する。
+
+で、問題はx86の命令をエミュレートしてx86の命令に書き換える時だ。これはエミュレートする必要がない。直接ホストのx86の命令を実行すればよい。双方同じCPUモデルなのだから、同じ命令がそのまま実行できるはずだ。そっちの方が変換の手間がなくなるから実行が高速になるが、それ以前に、そもそも無駄だ。
+
+のだが、ここで問題が起きる。実は、そのまま実行できない命令があるのだ。これはCPUが悪いのでも、QEMUのエミュレートが悪いわけでもない。実行できないのは、OSが実行を制限してしまうからだ。
+
+\subsection{リングプロテクション}
+
+実はすべてのCPU命令をユーザーが実行できるわけではない。OSしか実行できないような強力なコマンドは、OSのユーザーは実行することができない。これをOSの「リングプロテクション」と言い、これら特別な命令群を「Ring 0」とか「センシティブな命令」と読んだりするが、要するにOSのような特別な奴にしか実行が許されていない命令群があるのだ。Linuxで言うならば、カーネル空間でしか実行できない命令群である。
+
+ここで常に念頭において置かねばならないが、当たり前で忘れがちなことがある。それは、エミュレーターであるQEMUは「ユーザー空間のプログラムである」ということである。QEMUがユーザー空間で動作するソフトウェアであることが、脈々と発展し続けるKVM開発の原動力となる。すべての周辺技術はこの当たり前の事実との戦いの歴史である。
+
+つまり、確かにQEMUはx86の命令をすべて解釈し実行できる能力はあるが、センシティブな命令はQEMUが動作しているOSにより実行が禁止される。つまり、実行できない。実行しようとした場合はどうなるか分からない。普通なら、強制的にKillされるだろう。ホストから見れば、完全に「悪意のあるプログラム」にしか見えないからだ。
+
+センシティブな命令を実行するには、システムコールを使うか別のセンシティブでない命令群で置き換えるかしなければならない。さて、今QEMUは命令をホストのCPUで直接実行している。センシティブな命令が実行されようとしていることを知るにはどうすれば？この瞬間をQEMUがキャッチできなければ、QEMUはプロセスごとKillされることになる。
+
+長かったが、ここでKVMが現れる準備が整ったことになる。
+
+\section{KVM}
+
+さて、前章をもってすればKVMの解説は単純を極める。KVMとは、センシティブな命令が実行されようとすしていることを、ユーザー空間のプログラムに教える機能を持つ、カーネルモジュールである。知りたいユーザー空間のプログラムは/dev/kvmをポーリングしていると、KVMが教えてくれる。KVMはそれしかしない。今のKVMはいかに「本当にそれだけのことをする」ように機能を削り、磨かれているところである。
+
+\subsection{OpenStack}
 
 \begin{itemize}
   \item KVM
@@ -66,8 +105,6 @@ hogehoge
 \begin{lstlisting}
 ./stack.sh
 \end{lstlisting}
-
-hogehoge
 
 \chapter{Containers超入門}
 
