--- a/main.tex
+++ b/main.tex
@@ -116,15 +116,21 @@ vhostとは、ゲストとホストカーネルとの間の共有メモリ上に
 
 libvirt経由で起動したQEMUによる仮想マシンの引数をみてみよう。
 
-\section{QEMU再び}
+\section{QEMU Monitor}
 
 QEMUにはユーザーモードとシステムエミュレーターモードがある。前者はバイナリ変換をするだけなのだが、KVMの事を話すのであれば後者のシステムエミュレーターモードについて考えねばなるまい。ネットワークやディスクなどをエミュレートしてくれるのは後者のモードである。
 
 QEMUがどの様に動いているのかを見るには、QEMU Monitorを使う。これを使うと外部、つまりホストマシンから、仮想マシンの様々な情報を取得することができる。QEMUは仮想マシンの全てを知っているはずだから、取得できる情報はかなり多い。ホストとゲスト間のメモリのマッピングを当然のこと、ゲストのCPUのレジスタの内容まで見えてしまう。
 
+このQEMUモニター、できることが多くて意外に楽しいのだが、いまいち日の目を浴びていないように思われる。いや、浴びているのかもしれないけど、コンテナ界隈の人とかOpenStackの人とか、なんかそういう華やかな舞台にどうにも現れないきらいがある。ということで、ドキュメントがあまりない。使い方自体は簡単なので、是非いじって欲しい機能である。
+
 \subsection{qemu-monitor-command --hmp}
 
-どうせKVMで仮想マシンを建てているのだから、QEMUのモニターを直接使わずに、libvirtを経由することにしよう。そちらの方が見やすいし、大抵の場合は簡単だ。
+このQEMUモニター、どう使うのかというと、QEMUの画面でF2（またはAlt-F2）を押す。すると、画面が変わってQEMUモニターを操作するコマンドを受け付けるプロンプトが出現する。あとはhelpとか打ってみよう。
+
+なんのこっちゃって？そりゃそうだ。QEMUに画面があるって意外に知られていないのではないかと思う。百聞は一見にしかず。ためしにその端末でqemu-system-x86とか打ってみよう。X Window Systemを使っている人なら何か黒い画面が出てくると思う。これがQEMUのGUIである。新しいディストリビューションを使っている人はメニューバーなんかも出てくると思う。なんて言っている間に、QEMUは一旦iPXEでの起動を試し、それに失敗して今、起動できないという旨のメッセージが表示されているのではないか。普段libvirt経由で仮想マシンが動作しているときは、GUIを使わずにバックグラウンドで起動するようになっている。なので画面は出ない。
+
+このQEMUモニターはソケット経由で操作できる。GUIがなくてもそのソケットに接続すればQEMUモニターが使える。どうせlibvirtで仮想マシンを建てているだろうから、QEMUのモニターを直接使わずに、libvirtを経由することにしよう。実はそちらの方が見やすいし、大抵の場合は簡単だ。virshにqemu-monitor-commandというコマンドがあるので、使ってみよう。
 
 \chapter{Containers超入門}
 
