あとがき UPDATE by maryoshida

--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[9pt,b5paper,tombo]{jsbook}
+﻿\documentclass[9pt,b5paper,tombo]{jsbook}
 
 \usepackage[dvipdfmx]{graphicx}
 \usepackage{listings}
@@ -862,8 +862,8 @@ $ lxc list
 hogehoge
 
 \section{だーまり}
-
-hogehoge
+主にこじろーのゴリ押しで表紙担当しましたー。ひさぶりの絵描きで試行錯誤です(´･ω･`)
+まさかこのメンツで本出すことになるとはおもわんかった。。。ｗ
 
 \newpage
 
