--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-﻿\documentclass[9pt,b5paper,tombo]{jsbook}
+﻿\documentclass[9pt,b5paper,tombo,openany]{jsbook}
 
 \usepackage[dvipdfmx]{graphicx}
 \usepackage{listings}
@@ -14,16 +14,36 @@
 \thispagestyle{empty}
 \vspace*{-1truein}
 \vspace*{-\topmargin}
-\vspace*{-\headheight}
+\vspace*{-1.15\headheight}
 \vspace*{-\headsep}
 \vspace*{-\topskip}
-\noindent\hspace*{-1in}\hspace*{-\oddsidemargin}
-%\includegraphics[width=\paperwidth]{./img/cover.pdf}
+\noindent\hspace*{-1.16in}\hspace*{-\oddsidemargin}
+\includegraphics[width=1.042\paperwidth]{./img/hyoushi.pdf}
 
+\mbox{}
 \newpage
-
 \thispagestyle{empty}
 
+\mbox{}
+\newpage
+\thispagestyle{empty}
+
+\newpage
+\enlargethispage{\paperwidth}
+\thispagestyle{empty}
+\vspace*{-1truein}
+\vspace*{-\topmargin}
+\vspace*{-1.15\headheight}
+\vspace*{-\headsep}
+\vspace*{-\topskip}
+\noindent\hspace*{-1.16in}\hspace*{-\oddsidemargin}
+\includegraphics[width=1.042\paperwidth]{./img/nakabyoushi.pdf}
+
+\tableofcontents
+\thispagestyle{empty}
+
+\newpage
+\thispagestyle{empty}
 \vspace*{\stretch{1}}
 \begin{center}
 \begin{minipage}{0.3\hsize}
@@ -38,10 +58,6 @@
 \end{minipage}
 \end{center}
 \vspace*{\stretch{1}}
-
-\tableofcontents
-\thispagestyle{empty}
-
 
 \chapter{はじめに}
 
@@ -145,30 +161,30 @@ KVMモジュールは/dev/kvmをユーザー空間との接点として使う。
 /dev/kvmを介するAPIには以下のようなものがある。
 
 \begin{description}
-  \item{\verb|KVM_GET_API_VERSION|}
+  \item{\verb|KVM_GET_API_VERSION|：}
     KVMのバージョンを返す。12より小さいバージョンが返ってきた場合はKVMモジュールを使わない方がいいらしい。
-  \item{\verb|KVM_CREATE_VM|}
+  \item{\verb|KVM_CREATE_VM|：}
     文字通りKVMの作成をする。使う/dev/kvmのファイルディスクリプタが返る。
-  \item{\verb|KVM_CREATE_VCPU|}
+  \item{\verb|KVM_CREATE_VCPU|：}
     仮想マシンにCPUを追加する。max\_vcpuより小さい値である必要がある。
-  \item{\verb|KVM_RUN|}
+  \item{\verb|KVM_RUN|：}
     仮想マシンの実行。
-  \item{\verb|KVM_INTERRUPT|}
+  \item{\verb|KVM_INTERRUPT|：}
     割り込み
-  \item{\verb|KVM_SET_USER_MEMORY_REGION|}
+  \item{\verb|KVM_SET_USER_MEMORY_REGION|：}
     メモリの割り当て
 \end{description}
 
 KVMが特権命令を検知すると、/dev/kvm経由でその理由が通知される。これをVM EXITと呼ぶ。処理がKVMに戻ってゲストの命令が再度実行されることをVM ENTERと呼ぶ。VM EXIT時の理由としては以下のようなものがある。
 
 \begin{description}
-  \item{\verb|KVM_EXIT_FAIL_ENTRY|}
+  \item{\verb|KVM_EXIT_FAIL_ENTRY|：}
     よく分からんが実行できなかった！という理由。理由ではない。
-  \item{\verb|KVM_EXIT_IO|}
+  \item{\verb|KVM_EXIT_IO|：}
     KVMだけではハンドルできないIOをVCPUが実行しようとした場合。これは分かる。
-  \item{\verb|KVM_EXIT_MMIO|}
+  \item{\verb|KVM_EXIT_MMIO|：}
     \verb|KVM_EXIT_IO|のMMIO版
-  \item{\verb|KVM_EXIT_SYSTEM_EVENT|}
+  \item{\verb|KVM_EXIT_SYSTEM_EVENT|：}
     アーキテクチャ依存のイベント発生時。ARMのハイパーバイザコール（HVC）とか。
 \end{description}
 
@@ -854,30 +870,43 @@ $ lxc list
 
 \chapter{あとがき}
 
-\section{こじろー}
+\section*{こじろー}
 本体は表紙です。ついでに、中身も流し読みしていただけると嬉しいです。
 
-\section{まっきー}
+\section*{まっきー}
 
-hogehoge
+前回は延々といろいろ後書きを書いたのだが、今回はあまり本が読めなかったのでそれほど書くことが無かった。そういえば、久しぶりに『エウレカセブン』なんて聞いたな。
 
-\section{だーまり}
+\section*{だーまり}
 主にこじろーのゴリ押しで表紙担当しましたー。ひさぶりの絵描きで試行錯誤です(´･ω･`)
+
 まさかこのメンツで本出すことになるとはおもわんかった。。。ｗ
 
 \newpage
 
-%\setlength{\textwidth}{\fullwidth}
-%\setlength{\evensidemargin}{\oddsidemargin}
+\thispagestyle{empty}
+\vspace*{\stretch{1}}
+\begin{flushright}
+\begin{minipage}{0.5\hsize}
+\begin{description}
+  \item{著者：}こじろー・まっきー
+  \item{挿絵：}だーまり
+  \item{発行：}2015年8月14日
+  \item{印刷：}POPLS (\verb|http://www.inv.co.jp/~popls/|)
+\end{description}
+\end{minipage}
+\end{flushright}
+
+\newpage
 
 \enlargethispage{\paperwidth}
 \thispagestyle{empty}
 \vspace*{-1truein}
 \vspace*{-\topmargin}
-\vspace*{-\headheight}
+\vspace*{-1.15\headheight}
 \vspace*{-\headsep}
 \vspace*{-\topskip}
-\noindent\hspace*{-1in}\hspace*{-\oddsidemargin}
-%\includegraphics[width=\paperwidth]{./img/bcover.pdf}
+\noindent\hspace*{-1.16in}\hspace*{-\oddsidemargin}
+\includegraphics[width=1.042\paperwidth]{./img/ura-hyoushi.pdf}
 
 \end{document}
