--- a/main.tex
+++ b/main.tex
@@ -875,7 +875,27 @@ $ lxc list
 
 \section*{まっきー}
 
+\begin{quote}
+あらゆる「民主的」潮流、つまりこのばあい、「支配」の極小化をめざす潮流は、中途半端な状態とならざるをえない。「権利の平等」と恣意にたいする法的保証への要求とは、（中略）行政の形式的・合理的な「没主観性」を要求する。しかしながら、もしも「エートス」が、ある個々の問題で大衆の心をとらえるならば、エートス（中略）のもつ、具体的なケースと具体的な人物に志向した実質的「正義」への要請は、官僚制的行政の形式主義および規則にしばられた冷酷な「没主観性」と不可避的に衝突し、さらにこのような理由から、合理的に要求されてきたものを感情的に拒否せざるをえないことになるのである。
+\end{quote}
+
+\begin{flushright}
+『権力と支配』マックス・ヴェーバー（濱嶋朗　訳）
+\end{flushright}
+
 前回は延々といろいろ後書きを書いたのだが、今回はあまり本が読めなかったのでそれほど書くことが無かった。そういえば、久しぶりに『エウレカセブン』なんて聞いたな。
+
+やたらと雑賀先生がマックス・ヴェーバーを推すので、この半年はヴェーバーを読むのに費やしてしまった。今更『プロ倫』とか読むところから始め、最近ようやく『権力と支配』を読み終わった。え、結局2冊しか読んでないじゃん。心配は無用だ。ちゃんと『春風のスネグラチカ』も読んだ。相変わらずの大変態先生っぷりであった。沙村広明先生には一生ついていく所存である。
+
+とにかく、それはそれは難解な2冊であった。雑賀先生が1期で言ってた「理想的な官僚は、憤怒も不公平もなく……」の件の部分を見つけるのが目的だったが、それは『権力と支配』の比較的最初のほうに出てきてしまい、あとはテクストとの戦いだけが残った。とはいえ、あの本も最後の方になると官僚制の話題に移り、ここに至ると自身の肌感覚と通じるところもあり、おもしろく読めた。理解したとは言ってない。
+
+ここまで書いてようやく筆の勢いが乗ってきたので、もう少し辛抱頂きたい。
+
+KVMは僕の趣味で書いただけなので読まなくてよい。が、コンテナに関して言うならば、冒頭のデューク少尉の言葉と『権力と支配』から上の一節をひいてみた。これがまた会社員の肌感覚に合うから困ってしまう。どうにも本読みの訓練が足りないとこういう読み方をしてしまう。よくない。やめたい。
+
+官僚制は、結果的には我々が間接的に望んで生まれた。我々は官僚になれるならなりたい人もいれば、そうでない人もいるだろうが、最近の経営層ってのは全社員を官僚化させたいのかもしれない。全社員官僚化か。これはなかなかキてるテーマだと思う。なんかそう思って読むと、この本はなかなか面白いのではないかと思い、今回のあとがきにしてみた。例えばとある会社でコンテナ技術を導入するとして、なんでそんなことを考え始めちゃったのか、ということとか。
+
+あぁ、また読み直さなくてはならなくなった。本読みの世界はまだ遠いか。DIVAの方が近いかもな。ところで、楽園の保安官の名前がAngel(-a)ってのは雑だと思う。
 
 \section*{だーまり}
 主にこじろーのゴリ押しで表紙担当しましたー。ひさぶりの絵描きで試行錯誤です(´･ω･`)
@@ -896,6 +916,13 @@ $ lxc list
 \end{description}
 \end{minipage}
 \end{flushright}
+
+\mbox{}
+\newpage
+\thispagestyle{empty}
+\mbox{}
+\newpage
+\thispagestyle{empty}
 
 \newpage
 
